 * Fix: Prevent lowercase conversions of IndexView column headers (Virag Jain)
 * Fix: Ensure that `RichText` objects with the same values compare as equal (NikilTn)
 * Fix: Use `gettext_lazy` on generic model views so that language settings are correctly used (Matt Westcott)
 * Fix: Prevent JS error when reverting the spinner on a submit button after a validation error (LB (Ben) Johnston)
 * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
 * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
 * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
 * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)
 * Docs: Reorganise snippets documentation to cover customisations and optional features (Sage Abdullah)
 * Docs: Update color customisations guidance to include theme-agnostic options (Thibaud Colas)
 * Docs: Mark LTS releases in release note page titles (Thiago C. S. Tioma)
 * Docs: Revise main Getting started tutorial for clarity (Kevin Chung (kev-odin))
 * Maintenance: Switch to ruff for flake8 / isort code checking (Oliver Parker)
 * Maintenance: Deprecate `insert_editor_css` in favour of `insert_global_admin_css` (Ester Beltrami)
 * Maintenance: Optimise use of `specific` on Task and TaskState (Matt Westcott)
 * Maintenance: Use table UI component for workflow task index view (Matt Westcott)
 * Maintenance: Make header search available on generic index view (Matt Westcott)
 * Maintenance: Update pagination behaviour to reject out-of-range / invalid page numbers (Matt Westcott)
 * Maintenance: Remove color tokens which are duplicates / unused (Thibaud Colas)
 * Maintenance: Add tests to help with maintenance of theme color tokens (Thibaud Colas)
 * Maintenance: Split out a base listing view from generic index view (Matt Westcott)


5.0.2 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~
