@@ -32,6 +32,7 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
  * Ensure that `RichText` objects with the same values compare as equal (NikilTn)
  * Use `gettext_lazy` on generic model views so that language settings are correctly used (Matt Westcott)
  * Prevent JS error when reverting the spinner on a submit button after a validation error (LB (Ben) Johnston)
+ * Prevent crash when comparing page revisions that include `MultipleChooserPanel` (Matt Westcott)
 
 ### Documentation
 
