@@ -16,6 +16,7 @@ Changelog
  * Fix: Ensure that `RichText` objects with the same values compare as equal (NikilTn)
  * Fix: Use `gettext_lazy` on generic model views so that language settings are correctly used (Matt Westcott)
  * Fix: Prevent JS error when reverting the spinner on a submit button after a validation error (LB (Ben) Johnston)
+ * Fix: Prevent crash when comparing page revisions that include `MultipleChooserPanel` (Matt Westcott)
  * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
  * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
  * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
